# SemanticSearch-Khuna

./: README.md  docker-compose.yml
backend/: Cargo.toml  README.MD  build.rs
backend/src/: error.rs  main.rs  spfresh_ffi.rs  store.rs
backend/src/handler/: reviews.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
