[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
SPFresh={ path = "SPFresh"}
libc = "0.2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "5.0.0" 






